--- a/baxter_screen_writer/src/baxter_screen_writer/animator.ui
+++ b/baxter_screen_writer/src/baxter_screen_writer/animator.ui
@@ -15,20 +15,6 @@
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout">
-    <item row="10" column="1">
-     <widget class="QSlider" name="confusionValueSlider">
-      <property name="orientation">
-       <enum>Qt::Horizontal</enum>
-      </property>
-     </widget>
-    </item>
-    <item row="10" column="0">
-     <widget class="QLabel" name="label">
-      <property name="text">
-       <string>Less Confused</string>
-      </property>
-     </widget>
-    </item>
     <item row="0" column="1">
      <widget class="QLabel" name="confusionValueLabel">
       <property name="text">
@@ -36,44 +22,52 @@
       </property>
      </widget>
     </item>
-    <item row="1" column="2">
-     <widget class="QLabel" name="label_12">
+    <item row="1" column="0">
+     <widget class="QLabel" name="label_13">
       <property name="text">
-       <string>More Confused</string>
+       <string>Current Target:</string>
       </property>
      </widget>
     </item>
-    <item row="9" column="1">
-     <widget class="QLabel" name="label_3">
-      <property name="sizePolicy">
-       <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-        <horstretch>0</horstretch>
-        <verstretch>0</verstretch>
-       </sizepolicy>
-      </property>
+    <item row="3" column="1">
+     <widget class="QLabel" name="label_10">
       <property name="text">
-       <string>Set confusion</string>
+       <string>Confusion Target</string>
       </property>
       <property name="alignment">
-       <set>Qt::AlignBottom|Qt::AlignHCenter</set>
+       <set>Qt::AlignCenter</set>
       </property>
      </widget>
     </item>
-    <item row="10" column="2">
+    <item row="6" column="1">
+     <widget class="QSlider" name="confusionValueSlider">
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+     </widget>
+    </item>
+    <item row="6" column="2">
      <widget class="QLabel" name="label_2">
       <property name="text">
        <string>More Confused</string>
       </property>
      </widget>
     </item>
-    <item row="1" column="0">
-     <widget class="QLabel" name="label_10">
+    <item row="1" column="1">
+     <widget class="QLabel" name="confusionTargetLabel">
+      <property name="text">
+       <string/>
+      </property>
+     </widget>
+    </item>
+    <item row="6" column="0">
+     <widget class="QLabel" name="label">
       <property name="text">
        <string>Less Confused</string>
       </property>
      </widget>
     </item>
-    <item row="6" column="1">
+    <item row="8" column="1">
      <widget class="QSlider" name="horizontalSlider_2">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
@@ -87,6 +81,13 @@
       </property>
      </widget>
     </item>
+    <item row="2" column="0">
+     <widget class="QLabel" name="label_4">
+      <property name="text">
+       <string>Current Velocity:</string>
+      </property>
+     </widget>
+    </item>
     <item row="4" column="0">
      <widget class="QLabel" name="label_5">
       <property name="text">
@@ -94,7 +95,7 @@
       </property>
      </widget>
     </item>
-    <item row="6" column="2">
+    <item row="8" column="2">
      <widget class="QLabel" name="label_8">
       <property name="text">
        <string>Faster</string>
@@ -108,26 +109,6 @@
       </property>
      </widget>
     </item>
-    <item row="2" column="1">
-     <widget class="QLabel" name="label_4">
-      <property name="text">
-       <string>Confusion Target</string>
-      </property>
-      <property name="alignment">
-       <set>Qt::AlignCenter</set>
-      </property>
-     </widget>
-    </item>
-    <item row="1" column="1">
-     <widget class="QSlider" name="currentValueSlider">
-      <property name="enabled">
-       <bool>true</bool>
-      </property>
-      <property name="orientation">
-       <enum>Qt::Horizontal</enum>
-      </property>
-     </widget>
-    </item>
     <item row="4" column="2">
      <widget class="QLabel" name="label_6">
       <property name="text">
@@ -135,34 +116,43 @@
       </property>
      </widget>
     </item>
-    <item row="5" column="1">
+    <item row="7" column="1">
      <widget class="QLabel" name="label_9">
       <property name="text">
-       <string>Velocity</string>
+       <string>Velocity (FPS)</string>
       </property>
       <property name="alignment">
        <set>Qt::AlignCenter</set>
       </property>
      </widget>
     </item>
-    <item row="6" column="0">
+    <item row="8" column="0">
      <widget class="QLabel" name="label_7">
       <property name="text">
        <string>Slower</string>
       </property>
      </widget>
     </item>
-    <item row="3" column="0">
-     <widget class="QLabel" name="label_13">
+    <item row="2" column="1">
+     <widget class="QLabel" name="confusionVelocityLabel">
       <property name="text">
-       <string>Current Target:</string>
+       <string/>
       </property>
      </widget>
     </item>
-    <item row="3" column="1">
-     <widget class="QLabel" name="confusionTargetLabel">
+    <item row="5" column="1">
+     <widget class="QLabel" name="label_3">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
       <property name="text">
-       <string/>
+       <string>Confusion Value</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignBottom|Qt::AlignHCenter</set>
       </property>
      </widget>
     </item>
